--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-next-my-app",
-  "version": "14.1.2",
+  "version": "0.0.2",
   "keywords": [
     "react",
     "next",
@@ -23,6 +23,7 @@
   "scripts": {
     "dev:build": "rm -rf dist && ncc build ./index.ts -w -o dist/",
     "dev:test": "node ./dist/index.js",
+    "publish:npm": "npm publish",
     "----prerelease": "node ../../scripts/rm.mjs dist",
     "----release": "ncc build ./index.ts -o ./dist/ --minify --no-cache --no-source-map-register",
     "----prepublishOnly": "cd ../../ && turbo run build",
