--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "dist"
   ],
   "scripts": {
-    "dev:build": "rm -rf dist && ncc build ./index.ts -w -o dist/",
-    "dev:test": "node ./dist/index.js",
-    "publish:npm": "npm publish",
+    "build": "rm -rf dist && ncc build ./index.ts -w -o dist/",
+    "test": "node ./dist/index.js",
+    "----publish:npm": "npm publish",
     "----prerelease": "node ../../scripts/rm.mjs dist",
     "----release": "ncc build ./index.ts -o ./dist/ --minify --no-cache --no-source-map-register",
     "----prepublishOnly": "cd ../../ && turbo run build",
