스크립트 수정

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "dist"
   ],
   "scripts": {
-    "dev:build": "rm -rf dist && ncc build ./index.ts -w -o dist/",
-    "dev:test": "node ./dist/index.js",
+    "build": "rm -rf dist && ncc build ./index.ts -w -o dist/",
+    "test": "node ./dist/index.js",
     "publish:npm": "npm publish",
     "----prerelease": "node ../../scripts/rm.mjs dist",
     "----release": "ncc build ./index.ts -o ./dist/ --minify --no-cache --no-source-map-register",
